WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
168973
[WebRTC] LibWebRTC frame dropper is not working consistently
https://bugs.webkit.org/show_bug.cgi?id=168973
Summary
[WebRTC] LibWebRTC frame dropper is not working consistently
youenn fablet
Reported
2017-02-28 09:16:18 PST
It is sometimes dropping frames while there is no need.
Attachments
Patch
(2.09 KB, patch)
2017-02-28 09:19 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch for landing
(2.24 KB, patch)
2017-02-28 10:35 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2017-02-28 09:19:29 PST
Created
attachment 302939
[details]
Patch
youenn fablet
Comment 2
2017-02-28 09:20:42 PST
(In reply to
comment #1
)
> Created
attachment 302939
[details]
> Patch
This patch disables the frame dropper optimizer for now. We should investigate it further, probably after migrating to a more recent libwebrtc revision.
Eric Carlson
Comment 3
2017-02-28 09:27:24 PST
Comment on
attachment 302939
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=302939&action=review
> Source/ThirdParty/libwebrtc/Source/webrtc/modules/video_coding/video_sender.cc:117 > + // FIXME: Investigate why and enable it again.
Nit: please add a bug number here.
youenn fablet
Comment 4
2017-02-28 10:35:05 PST
Created
attachment 302948
[details]
Patch for landing
youenn fablet
Comment 5
2017-02-28 10:36:39 PST
Thanks for the review. (In reply to
comment #3
)
> Comment on
attachment 302939
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=302939&action=review
> > > Source/ThirdParty/libwebrtc/Source/webrtc/modules/video_coding/video_sender.cc:117 > > + // FIXME: Investigate why and enable it again. > > Nit: please add a bug number here.
Let's use this one. I'll reopen this bug once this patch got landed.
WebKit Commit Bot
Comment 6
2017-02-28 11:15:08 PST
Comment on
attachment 302948
[details]
Patch for landing Clearing flags on attachment: 302948 Committed
r213152
: <
http://trac.webkit.org/changeset/213152
>
WebKit Commit Bot
Comment 7
2017-02-28 11:15:14 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug