[WebRTC] LibWebRTC frame dropper is not working consistently https://bugs.webkit.org/show_bug.cgi?id=168973

Patch by Youenn Fablet <youenn@apple.com> on 2017-02-28
Reviewed by Eric Carlson.

* Source/webrtc/modules/video_coding/video_sender.cc: Disable temporarily the frame dropper as it is sometimes
dropping too many frames.

Canonical link: https://commits.webkit.org/185962@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@213152 268f45cc-cd09-0410-ab3c-d52691b4dbfc